<resources>
    <string name="app_name">StAlban_App</string>
    <string name="action_settings">Settings</string>
    <string name="galerie_titel_template">Titel</string>
    <string name="st_alban_in_der_kunst">St. Alban in der Kunst</string>
    <string name="st_alban_damals">St. Alban vor dem Krieg</string>
    <string name="st_alban_heute">St. Alban nach dem Krieg</string>
    <string name="startseite">Alt St. Alban</string>
    <string name="kriegsjahre">St. Alban im Krieg</string>
    <string name="image">Image</string>
    <string name="galerie">Galerie</string>
    <string name="timeline">Zeitleiste</string>
    <string name="image_name">Image Name</string>
    <string name="full_view">Full View</string>
    <string name="image_to_show">image to show</string>
    <string name="close">Close</string>
    <string name="menu">Wo soll es hingehen?</string>
    <string name="menuu">Menü</string>
    <string name="menu_tour">Ich möchte eine Museumstour!</string>
    <string name="menu_gallery">Ich möchte Bilder sehen!</string>
    <string name="menu_time">Ich möchte eine Zeitreise<br /> machen!</string>
    <string name="tour">Tour</string>
    <string name="zeitstrahl">Zeitstrahl</string>
    <string name="ber_uns">Impressum</string>
    <string name="tour_intro_text">Sie stehen vor einem der ältesten romanischen Kirchengebäuden Kölns.<br /> <b>Alt Sankt Alban.</b> <br />Das in Ruinen stehenden Kirchengebäude trägt die Narben der letzten Jahrhunderte und Kriege, welche die Stadt Köln geprägt haben, besonders präsent zur Schau. <br />Kommen sie mit auf eine kleine Zeitreise, welche die Kirche durch ihre Geschichte wiederauferstehen lässt.</string>
    <string name="tour_outro_text"><b>Sie haben das Ende der Tour erreicht. <br /><br />Was möchten Sie nun tun?</b></string>
    <string name="start">Start</string>
    <string name="stop_template">Tourstop Infos</string>
    <string name="zur_ck">Zurück</string>
    <string name="weiter">Weiter</string>
    <string name="tour_starten">Tour erneut starten</string>
    <string name="hauptmen">Hauptmenü</string>
    <string name="empty" />
    <string name="tour_image">tour image</string>
    <string name="stop1"><![CDATA[<b>>></b> Es ist sehr widersprüchlich, dass obwohl St. Alban neben St. Columba die <b>älteste und bevorzugteste Pfarre</b> war, uns von Alt St. Alban kaum Nachrichten überliefert wurden. (Reiners, Heribert 1911)<br /><br />
            Die Ursprünge gehen auf das <b>Jahr 800</b> zurück.]]></string>
    <string name="stop2"><![CDATA[<b>>></b> Der Name St. Alban wurde erstmals in einer Urkunde im Jahre <b>1172</b> vor, in welcher „Harmannus de S. Albano“ erwähnt wird. Genaueres ist über den Anfang nicht übermittelt.<br/><br/>
            <b>1176</b> wurde die Kirche erstmals als Pfarrkirche aufgeführt.
            Die älteste Baunachricht stammt von einer Schreinseintragung nach der im Jahre <b>1323</b> der Jude Joseph v. Arwilre Geld gibt, das für den Turmbau deponiert wird.]]></string>
    <string name="stop3"><![CDATA[<b>>></b> <b>1451</b> zur Zeit der Pest stellte sich der Kirchplatz als zu klein zur Beerdigung der ganzen Pesttoten heraus. Also holten sich in diesem Jahr die Kirchmeister beim Rat der Stadt die Erlaubnis, die Toten auf dem damals freien Platz zwischen den Häusern des “Heinrich Hardefuyst” und des Malers “Stephan Lochner” zu beerdigen.]]></string>
    <string name="stop4"><![CDATA[<b>>></b> Der Turm der Kirche mit seinen romanischen Formen stammt aus dem Jahr <b>1494</b>. Dieser stammt aus einer Stiftung von 5 oberland Gulden <i>„zu deme buwe der Kirspelskirchen zo sant Alban“</i>.<br/><br/>
            <b>1507</b> erhielt die Kirche die St. Alban gewidmete Bronzeglocken des Johann von Andernach. Sie war eine von insgesamt vier Glocken der Kirche. Sie trägt den Namen Alban und die Umschrift: <i>„ALBANUS HEISCHEN ICH IND ERE SENT QVIRINS LVIDEN ICH TZO GOTTDIEINST GEBRVCHT MEN MICH BLITZEN IND DONRE STUREN ICH“</i>.]]></string>
    <string name="stop5"><![CDATA[<b>>></b> Im Jahre <b>1633</b> wurde die Kirchenanlage nach Süden erweitert.<br/><br/>
            Von den Jahren <b>1668-1672</b> wurde die Kirche durch den Baumeister Arnold Gülich als Hallenkirche neu gestaltet. Aus diesem Umbau im Mittelalter hat die Kirche ihre heutige Form erhalten. Der Umbau wurde aus Dokumenten übermittelt, in welchen der Rat der Stadt 15.000 Ziegelsteine für den Umbau bewilligten.<br/><br/>
            <b>1911</b> wurde der Umbau des Innenraum nach Gülich so beschrieben:<br/><br/>
            „Beim Innern lagen die Verhältnisse für den Architekten, der den gegebenen Bau erweitern sollte, nicht so günstig wie bei St. Columba, und es ist ihm daher auch keine befriedigende Raumlösung gelungen. Da er eine möglichst weite Dehnung erstrebte, konnte er nur wenige Stützen geben. Aber der Gegensatz zum alten Teile ist dabei zu scharf geworden. Das Chor wirkt nun zu schmal und bietet kaum Raum für den Altar. Die ganze Ostpartie scheint zu schwer, und namentlich hier fühlt man, wie sich der Künstler mit dem Räume abmühte. Unschön ist vor allem dabei, wie der Bogen des Chorjoches von der Vierung abgeschnitten wird. Daneben schlug man in einem schmalen Abstand einen zweiten Bogen, den man an der Außenwand auf vorgelegtem Pfeiler lasten ließ. In der südlichen Nebenapsis zerstörte man dadurch deren alten Schluss und schuf gerade hier tote Ecken. Es ist eine verzwickte Bogenanlage, die anscheinend über das Können des Baumeisters Gülich hinausging, denn ein eigener „Bogensteller" trat bei der Konstruktion für ihn ein. Die Gewölbe der Kirche, die allenthalben reich gestaltet sind, befriedigen das Auge nur im Chore ganz, weil sie hier organisch sich darbieten, während sie teilweise sonst mit ihren Rippen in den Flächen verlaufen und zerschnitten werden und dazu in ihrer Verbindung mit den quadratischen Stützen und den zwar reich profilierten aber nüchternen Kapitellen nicht recht passen wollen. Auch dem kuppelartigen Schluss der Vierung ist ein reiches Rippensystem vorgelegt worden. Nordwestlich schiebt sich in den Kirchenraum der Turm, der in seinem unteren Durchgang und der Empore darüber ebenfalls gotisch eingewölbt ist.<br/><br/>
            Quelle: <i>http://www.lexikus.de/bibliothek/Koelner-Kirchen-ST-ALBAN</i>]]></string>
    <string name="stop6"><![CDATA[<b>>></b> Es folgten weitere dokumentierte Umbauten und Reparaturen, von denen leider wenig übermittelt ist.
            <b>1776</b> wurde die Kirche in Teilen von Mitteln der Familie de Groote erneuert.<br/><br/>
            <b>1826</b> Reparaturen wurden an der Kirche durchgeführt.<br/><br/>
            <b>1832</b> Reparaturen wurden an der Kirche durchgeführt.]]></string>
    <string name="stop7"><![CDATA[<b>>></b> <b>1838</b> bis hierhin gehen die Spuren einiger Aquarelle von St Alban. Von <b>1838-1856</b> waren diese im Besitz des Malers Johann Peter Weyer, von <b>1856 bis 1905</b> vermutlich in Belgien und dann seit <b>1905</b> im Kölner Stadtmuseum.]]></string>
    <string name="stop8"><![CDATA[<b>>></b> Auf einer Rundreise fertige Johann Anton Ramboux <b>1847</b> einige Skizzen von Alt St. Alban in seinem Skizzenbuch an.]]></string>
    <string name="stop9"><![CDATA[<b>>></b> <b>1895/96</b> wurde der Turm in Stand gesetzt und die Fassade zu ihrer heutigen Optik umgestaltet.<br/><br/> Reiners schrieb <b>1911</b> zu der Fassade <br/><br/> <i>„(…) neben dem Gürzenich, hat das Kirchlein des hl. Alban einen wenig günstigen Nachbarn gefunden. Neben der schönen und wohl proportionierten Schauseite dieses alten Festhauses vermag es mit seiner Fassade, die ihm eine Restauration des 19. Jahrhunderts gab, nicht zur Wirkung zu kommen, und seine beiden Flächen möchten, verglichen mit dem dortigen Reichtum, fast nüchtern scheinen.“</i><br/><br/> Quelle: <i>http://www.lexikus.de/bibliothek/Koelner-Kirchen-ST-ALBAN</i>]]></string>
    <string name="stop10"><![CDATA[<b>>></b> Aus dem Jahre <b>1916</b> ist eine Grundrisszeichnung überliefert, welche Aufschluss über die ehemaligen Gewölbe von Alt St. Alban gibt.]]></string>
    <string name="stop11"><![CDATA[<b>>></b> <b>1930</b> Fotografien zeigen das ehemalige Dach von Alt St. Alban aus verschiedenen Perspektiven (RBA)]]></string>
    <string name="stop12"><![CDATA[<b>>></b> Während des Zweiten Weltkriegs <b>(1939 - 1945)</b> wurde Alt St. Alban mehrfach von abgeworfenen Bomben getroffen und brannte letztendlich aus.<br/><br/>
            <b>1943</b> beschlagnahmte man drei von vier Glocken des Turms von Alt St. Alban und hängt sie ab. Die St. Alban gewidmete Glocke wurde als einzige nicht beschlagnahmt.<br/><br/>
            Nach dem letzten schweren Bombenangriff auf die Kölner Innenstadt am <b>02. März 1945</b> war die Kirche nur noch eine Ruine. Nur die Außenmauern und ein Teil des Turmes blieben stehen. Der letzte Pfarrverweser <b>Dr. Karl Koch</b> kam unter den Trümmern verschüttet ums Leben. Sein Leichnam wurde dort ein Jahr später aufgefunden.]]></string>
    <string name="stop13"><![CDATA[<b>>></b> <b>Nach dem Krieg</b> wurde die Kirche lediglich gesichert, aber nicht wieder aufgebaut. Sichtbar blieben noch die Pfeiler und Joche der Halle und die Apsiden mit den Fensteröffnungen.<br/><br/>
            Es wohnten nur noch <b>312 Katholiken</b> in dem zerstörten Pfarrbezirk St. Alban. Aufgrund der Vielzahl an schwer zerstörten Kirchen in der Innenstadt, wurde ein Wiederaufbau von Alt St. Alban ausgeschlossen.<br/><br/>
            Die zur Gemeinde gehörenden Grundstücke am Quartermarkt, auf denen früher Kirche, Pfarrhaus, Kaplanei und Küsterei standen, wurden von der Stadt erworben, um sie in den <b>Aufbau den Gürzenich</b> einzubeziehen.]]></string>
    <string name="stop14"><![CDATA[<b>>></b> <b>1952</b> Bilder von Johann von Buren zeigen den Gürzenich und St. Alban. (RBA)]]></string>
    <string name="stop15"><![CDATA[<b>>></b> Nach langen Verhandlungen wurde am <b>12. Juli 1954</b> zwischen der Kirchengemeinde St. Alban und der Stadt Köln ein Vertrag geschlossen, demzufolge der Grundbesitz der Kirchengemeinde am Quartermarkt im Tausche gegen andere Grundstücke in das Eigentum der Stadt überging. Die Stadt Köln verpflichtete sich, den <b>Turm der Kirche</b> zu restaurieren und die dort befindliche <b>St.-Konrad-von-Parzham-Kapelle</b> wiederherzustellen, zu erhalten und sie dem Erzbistum zur Verfügung zu stellen. <br/><br/>Die Stadt verpflichtete sich: <i>„das übernommene Kirchengelände zu einer Erinnerungsstätte zu gestalten und stets und ausschließlich so zu verwenden, daß der Weihecharakter des Ortes gewahrt und jede Entweihung verhindert wird“</i>.]]></string>
    <string name="stop16"><![CDATA[<b>>></b> Am <b>23. Dezember 1954</b> erteilte Kardinal Frings die Genehmigung zur Profanierung: <i>„zu profanen aber nicht schmutzigen Zwecken“</i>. In den Ruinen konnte nun eine Gedenkstätte für die Toten der Weltkriege und der nationalsozialistischen Gewaltherrschaft errichtet werden.<br/><br/>
            Die Ruine wurde in den Wiederaufbau des Gürzenichs einbezogen: die östliche und südliche Außenmauer der Kirche wurde zur Innenmauer von Treppenhaus und Foyer des Gürzenichs. Von dort hat man einen Blick in die Ruine und auf die im früheren Altarraum aufgestellten steinernen Skulpturen des <b>„Trauernden Elternpaares“</b> der Käthe Kollwitz.]]></string>
    <string name="stop17"><![CDATA[<b>>></b> <b>1958/1959</b> wurde <b>Neu St. Alban</b> im Kölner Stadtteil Neustadt-Nord in der Nordecke des Stadtgartens errichtet. Die Kirche wurde von Hans Schilling aus Trümmerziegeln der stark beschädigten und 1958 abgerissenen Oper Köln errichtet.<br/><br/>
            Die Sankt Bruder-Konrad-Kapelle im Erdgeschoss des Turms wurde im Oktober <b>1960</b> fertiggestellt und <b>1964</b> geweiht.]]></string>
</resources>