<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- item for the back button -->

    <item
        android:id="@+id/backButton"
        android:icon="@drawable/sta_arrowback"
        android:title="Zurück"
        app:showAsAction="always"

        />

    <!-- items for the navigation menu-->

    <item android:id="@+id/action_tour"
        android:title="@string/tour"
        app:showAsAction="never"/>

    <item android:id="@+id/action_gallery"
        android:title="@string/galerie"
        app:showAsAction="never">

        <menu>
            <item
                android:id="@+id/action_galleryMenu"
                android:title="Menü"
                app:showAsAction="never"/>
            <item android:id="@+id/action_vorKrieg"
                android:title="Vor dem Krieg"
                app:showAsAction="never"/>
            <item android:id="@+id/action_Krieg"
                android:title="Im Krieg"
                app:showAsAction="never"/>
            <item android:id="@+id/action_nachKrieg"
                android:title="Nach dem Krieg"
                app:showAsAction="never"/>
            <item android:id="@+id/action_Kunst"
                android:title="In der Kunst"
                app:showAsAction="never"/>

        </menu>

    </item>

    <item android:id="@+id/action_timelaps"
        android:title="@string/zeitstrahl"
        app:showAsAction="never"/>

    <item android:id="@+id/action_impressum"
        android:title="@string/ber_uns"
        app:showAsAction="never"/>

</menu>