<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sta_background_gallery_menu">


    <Button
        android:id="@+id/gallery_war"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kriegsjahre"
        android:textSize="16sp"
        app:backgroundTint="@color/basicApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/gallery_art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/st_alban_in_der_kunst"
        android:textSize="16sp"
        app:backgroundTint="@color/basicApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_war"
        app:layout_constraintVertical_bias="0.191" />

    <Button
        android:id="@+id/gallery_past"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_alban_damals"
        android:textSize="16sp"
        app:backgroundTint="@color/basicApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_art"
        app:layout_constraintVertical_bias="0.318" />

    <Button
        android:id="@+id/gallery_present"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_alban_heute"
        android:textSize="16sp"
        app:backgroundTint="@color/basicApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gallery_past"
        app:layout_constraintVertical_bias="0.543" />

</androidx.constraintlayout.widget.ConstraintLayout>