<?xml version="1.0" encoding="utf-8"?>
<!--
@author ChristineSchaefer

Layout for tour end view
two options: start tour again or go to menu

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/crba_mfl000453_40">

    <!-- toolbar with navigation -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/sta_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- information about options -->
    <TextView
        android:id="@+id/tour_intro"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:background="@drawable/tour_start"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tour_outro_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <!-- menu button -->
    <Button
        android:id="@+id/btn_menu"
        android:layout_width="142dp"
        android:layout_height="72dp"
        android:text="@string/hauptmen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tour_intro"
        app:layout_constraintVertical_bias="0.569" />

    <!-- restart tour button -->
    <Button
        android:id="@+id/btn_tour"
        android:layout_width="142dp"
        android:layout_height="72dp"
        android:text="@string/tour_starten"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toEndOf="@+id/btn_menu"
        app:layout_constraintTop_toBottomOf="@+id/tour_intro"
        app:layout_constraintVertical_bias="0.569" />

</androidx.constraintlayout.widget.ConstraintLayout>