<?xml version="1.0" encoding="utf-8"?>
<!--
@author ChristineSchaefer

Layout-template for tour stops

-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/header">

    <!-- toolbar with navigation -->
    <include
        android:id="@+id/toolbar"
        layout="@layout/sta_toolbar" />

    <!-- allows to scroll through the view -->
    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <!-- allows elements to stand among themselves -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <!-- empty textview to fill with different string -->
            <TextView
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="start"
                android:justificationMode="inter_word"
                android:padding="12dp"
                android:text="@string/stop_template"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.83"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.319" />

            <!-- image resource for tour stop -->
            <ImageView
                android:id="@+id/tour_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher_round"
                android:contentDescription="@string/tour_image" />

            <!-- allows buttons to stand next to each other -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <!-- button back -->
                <Button
                    android:id="@+id/btn_back"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="142dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/zur_ck"
                    android:textColor="@color/header"
                    android:textSize="14sp"
                    app:backgroundTint="@color/white"
                    app:layout_constraintVertical_bias="0.499" />

                <!-- button next -->
                <Button
                    android:id="@+id/btn_weiter"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="142dp"
                    android:layout_height="72dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/weiter"
                    android:textColor="@color/header"
                    android:textSize="14sp"
                    app:backgroundTint="@color/white"
                    app:layout_constraintVertical_bias="0.499" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>